# Resonance

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/app/: Cargo.toml
crates/app/src/: engine.rs  lib.rs  plugin.rs  runner.rs  stage.rs
crates/app/src/runner/: window_runner.rs
crates/assets/: Cargo.toml
crates/assets/src/: async_loader.rs  audio_loader.rs  cache.rs  font_loader.rs  handle.rs  hot_reload.rs  lib.rs  loader.rs  mesh_loader.rs  plugin.rs  shader_loader.rs  texture_loader.rs
crates/audio/: Cargo.toml
crates/audio/src/: backend.rs  components.rs  lib.rs  plugin.rs  systems.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logger.rs  math.rs  time.rs
crates/ferrite/: Cargo.toml
crates/ferrite/src/: lib.rs  prelude.rs
crates/ferrite_app/: Cargo.toml
crates/ferrite_app/src/: engine.rs  lib.rs  plugin.rs  runner.rs  stage.rs
crates/ferrite_app/src/runner/: window_runner.rs
crates/ferrite_app/tests/: engine_tests.rs
crates/ferrite_assets/: Cargo.toml
crates/ferrite_assets/src/: async_loader.rs  audio_loader.rs  cache.rs  font_loader.rs  handle.rs  hot_reload.rs  lib.rs  loader.rs  mesh_loader.rs  plugin.rs  shader_loader.rs  texture_loader.rs
crates/ferrite_client/: Cargo.toml
crates/ferrite_client/src/: lib.rs  plugin.rs
crates/ferrite_client/src/audio/: backend.rs  components.rs  mod.rs  plugin.rs  systems.rs
crates/ferrite_client/src/input/: keyboard.rs  mod.rs  mouse.rs
crates/ferrite_client/src/renderer/: backend.rs  camera.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  systems.rs  texture.rs
crates/ferrite_client/src/renderer/shaders/: basic.wgsl  textured.wgsl
crates/ferrite_client/src/window/: mod.rs  runner.rs  systems.rs
crates/ferrite_core/: Cargo.toml
crates/ferrite_core/src/: error.rs  lib.rs  logger.rs  math.rs  time.rs
crates/ferrite_core/tests/: math_tests.rs  time_tests.rs
crates/ferrite_network/: Cargo.toml
crates/ferrite_network/src/: interpolation.rs  lib.rs  plugin.rs  protocol.rs  replication.rs  snapshot.rs  transport.rs
crates/ferrite_physics/: Cargo.toml
crates/ferrite_physics/src/: character.rs  collision.rs  components.rs  events.rs  integration.rs  lib.rs  plugin.rs  raycast.rs  spatial.rs  systems.rs
crates/ferrite_scene/: Cargo.toml
crates/ferrite_scene/src/: chunk.rs  converter.rs  lib.rs  manager.rs  plugin.rs  prefab.rs  scene.rs  streaming.rs
crates/ferrite_server/: Cargo.toml
crates/ferrite_server/src/: authority.rs  connection.rs  lib.rs  plugin.rs  validation.rs
crates/ferrite_transform/: Cargo.toml
crates/ferrite_transform/src/: components.rs  hierarchy.rs  lib.rs  plugin.rs  systems.rs
crates/ferrite_transform/tests/: hierarchy_tests.rs  integration_tests.rs  transform_tests.rs
crates/input/: Cargo.toml
crates/input/src/: keyboard.rs  lib.rs  mouse.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/transform/: Cargo.toml
crates/transform/src/: components.rs  hierarchy.rs  lib.rs  plugin.rs  systems.rs
crates/window/: Cargo.toml
crates/window/src/: engine_ext.rs  lib.rs  plugin.rs  runner.rs  window.rs
docs/: addons.md  plugins.md
examples/: README.md  camera_3d.rs  custom_system.rs  graphics_settings.rs  hello_ferrite.rs  hello_resonance.rs  hello_triangle.rs  hello_window.rs  mesh_primitives.rs  minimal.rs  phase1_test.rs  phase2_test.rs  physics_sim.rs  server_basic.rs  textured_quad.rs  window_modes.rs
examples/01_basics/: ecs_demo.rs  hello_engine.rs
examples/04_physics/: character_controller.rs
examples/05_assets/: asset_showcase.rs
examples/06_audio/: audio_demo.rs
examples/08_scenes/: chunked_world_demo.rs  scene_demo.rs
ferrite_editor/: DEBUG.md  EDITOR_ROADMAP.md  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  MULTIWEBVIEW_ARCHITECTURE.md  QUICKSTART.md  README.md  SAMPLE_SCENE_COMPLETE.md  SETUP.md  VIEWPORT_FIX.md  dev.sh  index.html  package-lock.json  package.json  run.sh  scene.ron  test-simple.html  vite.config.ts
ferrite_editor/src/: App.test.tsx  App.tsx  index.css  main-backup.tsx  main-simple.tsx
ferrite_editor/src-tauri/: Cargo.toml  tauri.conf.json
ferrite_editor/src-tauri/capabilities/: default.json
ferrite_editor/src-tauri/src/: component_registry.rs  engine.rs  main.rs  state.rs  viewport.rs  viewport_window.rs
ferrite_editor/src-tauri/src/commands/: component.rs  entity.rs  mod.rs  scene.rs  viewport.rs
ferrite_editor/src-tauri/src/shaders/: viewport.wgsl
ferrite_editor/src/components/hierarchy/: SceneHierarchy.tsx
ferrite_editor/src/lib/: api.ts  types.ts
ferrite_editor/src/stores/: editorStore.ts
ferrite_editor/src/webviews/: Properties.tsx  Sidebar.tsx  Toolbar.tsx
src/: build_utils.rs  lib.rs  prelude.rs
src/addons/: debug_render.rs  debug_ui.rs  flycam.rs  mod.rs  wireframe.rs
src/app/: default_plugins.rs  engine.rs  mod.rs  plugin.rs  runner.rs  stage.rs
src/assets/: assets.rs  async_loader.rs  audio_loader.rs  cache.rs  font_loader.rs  handle.rs  hot_reload.rs  loader.rs  mesh_loader.rs  mod.rs  pak.rs  plugin.rs  shader_loader.rs  source.rs  texture_loader.rs
src/assets/loader/: audio.rs  font.rs  mesh.rs  mod.rs  shader.rs  texture.rs
src/audio/: backend.rs  components.rs  mod.rs  plugin.rs  systems.rs
src/core/: debug_ui_plugin.rs  egui_plugin.rs  error.rs  events.rs  general_info_ui.rs  logger.rs  math.rs  memory_stats.rs  mod.rs  performance.rs  performance_ui.rs  profiler.rs  profiler_ui.rs  time.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/net/: clock.rs  connection.rs  mod.rs  protocol.rs  serialization.rs  transport.rs
src/renderer/: camera.rs  components.rs  graphics_settings.rs  mesh.rs  mod.rs  octree.rs  pipeline.rs  plugin.rs  systems.rs
src/renderer/graph/: mod.rs  node.rs
src/renderer/lighting/: components.rs  mod.rs
src/renderer/shaders/: cull.wgsl  mesh.wgsl  ssao.wgsl  ssao_blur.wgsl  wireframe.wgsl
src/renderer/systems/: mod.rs
src/transform/: components.rs  hierarchy.rs  mod.rs  plugin.rs  systems.rs
src/window/: engine_ext.rs  mod.rs  plugin.rs  runner.rs  systems.rs  window.rs
(+30 files in other folders)
