[package]
name = "resonance"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Kiezik"]
repository = "https://github.com/adriankiezik/Resonance"
documentation = "https://docs.rs/resonance"
license = "MIT"
description = "A modular game engine. Heavy work in progress."
keywords = ["game", "engine", "graphics", "ecs"]
categories = ["game-engines", "graphics"]

[[bin]]
name = "asset-packer"
path = "src/bin/asset_packer.rs"

[dependencies]
bevy_ecs = "0.17"
glam = { version = "0.30", features = ["serde"] }
log = "0.4"

# Assets
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tobj = "4.0"
gltf = { version = "1.4", features = ["import"] }
symphonia = { version = "0.5", features = ["all"] }
ab_glyph = "0.2"
flate2 = "1.0"
crc32fast = "1.4"
walkdir = "2.5"

# Core
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"

# Networking
renet = "1.2"
bincode = { version = "2.0", features = ["serde"] }
ron = "0.8"

# Window/Input
winit = { version = "0.30", features = ["serde"] }

# Audio
rodio = "0.21"

# Rendering
wgpu = "27.0.1"
bytemuck = { version = "1.20", features = ["derive"] }
pollster = "0.3"
rand = "0.8"
meshopt = "0.4"

# Async
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "sync", "time", "fs"] }
dashmap = "6.0"

# Performance
rayon = "1.10"
ahash = "0.8"

# System Info
sysinfo = "0.33"

[dev-dependencies]
ron = "0.8"
env_logger = "0.11"
anyhow = "1.0"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
