[package]
name = "resonance_audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
resonance_core = { workspace = true }
resonance_app = { workspace = true }
resonance_transform = { workspace = true }
resonance_assets = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }
rodio = { workspace = true }
log = { workspace = true }