[package]
name = "ferrite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A multiplayer-ready game engine built in Rust"
keywords = ["gamedev", "engine", "ecs", "multiplayer"]
categories = ["game-engines"]

[dependencies]
# Re-export all ferrite crates
ferrite_core = { workspace = true }
ferrite_app = { workspace = true }
ferrite_transform = { workspace = true }
ferrite_physics = { workspace = true }
ferrite_network = { workspace = true }
ferrite_assets = { workspace = true }
ferrite_scene = { workspace = true }

# Client and server are optional features
ferrite_client = { workspace = true, optional = true }
ferrite_server = { workspace = true, optional = true }

# Re-export commonly used dependencies
bevy_ecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
default = ["client"]
client = ["ferrite_client", "wgpu"]
server = ["ferrite_server"]
full = ["client", "server"]

[dev-dependencies]
ron = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "hello_engine"
path = "../../examples/01_basics/hello_engine.rs"

[[example]]
name = "ecs_demo"
path = "../../examples/01_basics/ecs_demo.rs"

[[example]]
name = "hello_window"
path = "../../examples/02_window/hello_window.rs"
required-features = ["client"]

[[example]]
name = "window_modes"
path = "../../examples/02_window/window_modes.rs"
required-features = ["client"]

[[example]]
name = "hello_triangle"
path = "../../examples/03_rendering/hello_triangle.rs"
required-features = ["client"]

[[example]]
name = "textured_quad"
path = "../../examples/03_rendering/textured_quad.rs"
required-features = ["client"]

[[example]]
name = "camera_3d"
path = "../../examples/03_rendering/camera_3d.rs"
required-features = ["client"]

[[example]]
name = "mesh_primitives"
path = "../../examples/03_rendering/mesh_primitives.rs"
required-features = ["client"]

[[example]]
name = "physics_sim"
path = "../../examples/04_physics/physics_sim.rs"

[[example]]
name = "character_controller"
path = "../../examples/04_physics/character_controller.rs"
required-features = ["client"]

[[example]]
name = "asset_showcase"
path = "../../examples/05_assets/asset_showcase.rs"

[[example]]
name = "audio_demo"
path = "../../examples/06_audio/audio_demo.rs"

[[example]]
name = "server_basic"
path = "../../examples/07_network/server_basic.rs"

[[example]]
name = "scene_demo"
path = "../../examples/08_scenes/scene_demo.rs"

[[example]]
name = "chunked_world_demo"
path = "../../examples/08_scenes/chunked_world_demo.rs"
