[package]
name = "ferrite_assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrite_core = { workspace = true }
ferrite_app = { workspace = true }
bevy_ecs = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["fs", "io-util"]
