[package]
name = "ferrite_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
