[package]
name = "ferrite_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrite_core = { workspace = true }
ferrite_app = { workspace = true }
ferrite_network = { workspace = true }
bevy_ecs = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
