[package]
name = "resonance_transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
resonance_core = { workspace = true }
resonance_app = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }