[package]
name = "resonance_window"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
description = "Window management and event loop for the Resonance game engine"

[dependencies]
resonance_core = { workspace = true }
resonance_app = { workspace = true }
resonance_input = { path = "../input" }
resonance_renderer = { path = "../renderer" }
bevy_ecs = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }